# mincer

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  deploy_bundle.sh  fixbundle.sh  gstosxaacencode.m  gstosxdesktopsrc.m  gstosxvideoscale.m  index.html  meson.build  mincer.desktop  mincer.glade  mincer.icns  mincer.m  mincer.vala  params.json  premake5.lua
Mincer.app/Contents/: Info.plist
Mincer.app/Contents/MacOS/: .gitignore
include/: app.h  gstreamer.h  gui.h
src/: app.cpp  app.h  gstreamer.cpp  gui.cpp  gui.h
stylesheets/: stylesheet.css
